# SegmentacionMedicaUPS

./: .gitignore  CMakeLists.txt  Huesos_estadisticas.csv  MedicalImageApp.cpp  MedicalImageApp.h  MedicalImageProcessor.cpp  MedicalImageProcessor.h  Pulmones_estadisticas.csv  README.md  index.html  main.cpp  main.py  med_image_processor.py  mi_app  requirements.txt
L333/: L333_QD_1_1.CT.0004.0002.2015.12.22.20.44.28.327357.358733616.IMA  L333_QD_1_1.CT.0004.0003.2015.12.22.20.44.28.327357.358733640.IMA  L333_QD_1_1.CT.0004.0004.2015.12.22.20.44.28.327357.358733664.IMA  L333_QD_1_1.CT.0004.0005.2015.12.22.20.44.28.327357.358733688.IMA  L333_QD_1_1.CT.0004.0006.2015.12.22.20.44.28.327357.358733712.IMA  L333_QD_1_1.CT.0004.0007.2015.12.22.20.44.28.327357.358733736.IMA  L333_QD_1_1.CT.0004.0008.2015.12.22.20.44.28.327357.358733760.IMA  L333_QD_1_1.CT.0004.0009.2015.12.22.20.44.28.327357.358733784.IMA  L333_QD_1_1.CT.0004.0010.2015.12.22.20.44.28.327357.358733808.IMA  L333_QD_1_1.CT.0004.0011.2015.12.22.20.44.28.327357.358733832.IMA  L333_QD_1_1.CT.0004.0012.2015.12.22.20.44.28.327357.358733856.IMA  L333_QD_1_1.CT.0004.0013.2015.12.22.20.44.28.327357.358733880.IMA  L333_QD_1_1.CT.0004.0014.2015.12.22.20.44.28.327357.358733904.IMA  L333_QD_1_1.CT.0004.0015.2015.12.22.20.44.28.327357.358733928.IMA  L333_QD_1_1.CT.0004.0016.2015.12.22.20.44.28.327357.358733952.IMA  L333_QD_1_1.CT.0004.0017.2015.12.22.20.44.28.327357.358733976.IMA  L333_QD_1_1.CT.0004.0018.2015.12.22.20.44.28.327357.358734000.IMA  L333_QD_1_1.CT.0004.0019.2015.12.22.20.44.28.327357.358734024.IMA  L333_QD_1_1.CT.0004.0020.2015.12.22.20.44.28.327357.358734048.IMA  L333_QD_1_1.CT.0004.0021.2015.12.22.20.44.28.327357.358734072.IMA  L333_QD_1_1.CT.0004.0022.2015.12.22.20.44.28.327357.358734096.IMA  L333_QD_1_1.CT.0004.0023.2015.12.22.20.44.28.327357.358734120.IMA  L333_QD_1_1.CT.0004.0024.2015.12.22.20.44.28.327357.358734144.IMA  L333_QD_1_1.CT.0004.0025.2015.12.22.20.44.28.327357.358734168.IMA  L333_QD_1_1.CT.0004.0026.2015.12.22.20.44.28.327357.358734192.IMA  L333_QD_1_1.CT.0004.0027.2015.12.22.20.44.28.327357.358734216.IMA  (+583 more)
(+1 files in other folders)
